# mitsubishi-heatpump

./: .gitignore  CMakeLists.txt  README.md  commitmsg.tmp  openapi.yaml  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.local.example
.github/: copilot-instructions.md
.github/workflows/: build.yml  create-release.yml  host-tests.yml
components/cn105/: CMakeLists.txt  cn105.cpp  cn105_codec.cpp
components/cn105/include/: cn105.h  cn105_codec.h  cn105_types.h
components/hvac_group/: CMakeLists.txt  group_config.cpp  group_proto.cpp
components/hvac_group/include/: group_config.h  group_proto.h
components/hvac_mqtt/: CMakeLists.txt  hvac_mqtt.cpp  hvac_topics.cpp
components/hvac_mqtt/include/: hvac_mqtt.h  hvac_topics.h
components/m5pm1/: CMakeLists.txt  m5pm1.cpp
components/m5pm1/include/: m5pm1.h
main/: CMakeLists.txt  Kconfig.projbuild  auth_manager.cpp  auth_manager.h  capability.cpp  capability.h  diag.cpp  diag.h  dns_server.cpp  dns_server.h  events.cpp  events.h  idf_component.yml  main.cpp  ota.cpp  ota.h  status_led.cpp  status_led.h  web_ui.cpp  web_ui.h  wifi_manager.cpp  wifi_manager.h
main/web/: gzip_html.py  index.html  manifest.webmanifest  portal.html
test/api/: check_openapi_routes.mjs
test/host/: test_cn105_codec.cpp  test_group_proto.cpp  test_hvac_topics.cpp
test/ui/: check_render_handlers.mjs  check_render_runtime.mjs  check_ui_syntax.mjs
